examples/python-web-app/my-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: my-app-deploy
  name: my-app-deploy
spec:
  replicas: 2   
  selector:
    matchLabels:
      app: my-app-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-app-deploy
    spec:
      containers:
      - image: aks1105/web-python-image
        name: web-python-image
        resources: {}
status: {}
