examples/python-web-app/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-app-service
  name: my-app-service
spec:
  ports:
  - name: 3007-8000
    port: 3007
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-app-deploy
  type: LoadBalancer
status:
  loadBalancer: {}
